test/types/enum/operations/comparisons/enumComparisonsMixed.chpl
enum color {red, orange, yellow, green, blue, indigo, violet};
enum size {small, medium, large};

writeln(color.red < size.small);
writeln(color.red <= size.small);
writeln(color.red >= size.small);
writeln(color.red > size.small);
writeln(color.red == size.small);
writeln(color.red != size.small);
